svc.kanbo.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: base-addresses  
spec:
  ports:
  - name: kanbo-service
    port: 3456
    targetPort: 3456
  type: LoadBalancer
  selector:
    app: kanbo
